--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -1,3 +1,11 @@
+.counter{
+	/* padding-top: 50px; */
+	background:  #223645;
+}
+.content {
+	padding-top: 100px;
+}
+
 .single-couter h1 {
 	font-size: 80px;
 	color: #e12454;
@@ -53,4 +61,10 @@
 	width: 30px;
 	visibility: visible;
 	opacity: 1;
+}
+.appointment{
+	margin-top: 160px;
+}
+.appoinment-right{
+	padding-left: 100px;
 }
