--- a/src/landingPage/styles/home.css
+++ b/src/landingPage/styles/home.css
@@ -377,6 +377,15 @@
 	background-color: rgb(225, 36, 84);
 	box-shadow: 0px 8px 16px 0px rgba(225, 36, 84, 0.2);
 }
+.btn-icon-red{
+	border-radius: 30px;
+	padding-left: 84px;
+	padding-right: 50px;
+	padding-top: 24px;
+	padding-bottom: 22px;
+	background-color: rgb(225, 36, 84);
+	box-shadow: 0px 8px 16px 0px rgba(225, 36, 84, 0.2);
+}
 .btn-icon-green {
 	background-color: rgb(143, 181, 105);
 	box-shadow: 0px 8px 16px 0px rgba(143, 181, 105, 0.3);
