--- a/src/landingPage/styles/doctor.css
+++ b/src/landingPage/styles/doctor.css
@@ -1,3 +1,6 @@
+.team-activation{
+    display: flex;
+}
 .team-box-2 {
 	padding: 30px;
 	background-color: rgb(255, 255, 255);
@@ -104,7 +107,6 @@
 .team-social-profile ul li a {
 	font-size: 14px;
 	color: #a0aab1;
-	text-decoration: none;
 }
 .team-social-profile ul li a:hover {
 	color: #ce1b28;
