--- a/src/landingPage/styles/testimonials.css
+++ b/src/landingPage/styles/testimonials.css
@@ -89,3 +89,19 @@
 .testi-rating-list ul li i {
 	color: #ffae00;
 }
+.testimonials-activation{
+	display: flex;
+	/* flex-wrap: wrap; */
+	align-items: center;
+	justify-content: center;
+}
+.testimonials-activation .col-xl-12{
+	margin-right: 5vw;
+	margin-bottom: 5vw;
+	width: 40vw;
+}
+@media(max-width: 1200px){
+	.testimonials-activation{
+		flex-wrap: wrap;
+	}
+}
