--- a/src/landingPage/styles/home.css
+++ b/src/landingPage/styles/home.css
@@ -60,7 +60,7 @@
 	font-weight: 500;
 	padding: 48px 0;
 	display: block;
-	font-size: 14px;
+	font-size: 20px;
 }
 .header__menu.header-menu-white ul li a {
 	color: #ffff;
@@ -383,8 +383,9 @@
 }
 
 .btn-icon-green {
-	background-color: rgb(143, 181, 105);
-	box-shadow: 0px 8px 16px 0px rgba(143, 181, 105, 0.3);
+	background-color: #1FB6BA;
+	box-shadow: 0px 4px 12px rgba(31, 182, 186, 0.5);
+	border-radius: 48px;
 }
 
 .btn-icon:hover {
