--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -132,7 +132,7 @@
 	margin-bottom: 45px;
 }
 .service-box-3 .service-content-box {
-	padding: 0 15px;
+	padding: 0 10px;
 	margin-top: -30px;
 	position: relative;
 }
@@ -263,7 +263,9 @@
 .service-details-thumb img {
 	width: 100%;
 }
-
+.service-thumb img{
+	width: 100%;
+}
 .h4services-bg {
 	position: absolute;
 	width: 100%;
