--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -263,7 +263,7 @@
 .service-details-thumb img {
 	width: 100%;
 }
-.service-thumb img{
+.service-thumb.service1 img{
 	width: 100%;
 }
 .h4services-bg {
