--- a/src/landingPage/styles/footer.css
+++ b/src/landingPage/styles/footer.css
@@ -16,10 +16,20 @@
 	color: #13232f;
 }
 .emmergency-call {
+	display: flex;
+	align-items: center;
 	padding-bottom: 25px;
 	border-bottom: 2px solid #ebebeb;
 	margin-bottom: 40px;
 }
+.emmergency-call img{
+	padding: 0 20px;
+	height: 45px;
+}
+/* .emmergency-call .fix{
+	display: flex;
+	width: 100%;
+} */
 .footer-contact-info {
 	border-radius: 16px;
 	background-color: rgb(255, 255, 255);
