Services page updated

--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -368,3 +368,10 @@
 .facalty-text{
 	margin: 80px 0;
 }
+.service-content{
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	align-items: center;
+	justify-content: space-between;
+}
