--- a/src/landingPage/styles/latest.css
+++ b/src/landingPage/styles/latest.css
@@ -7,11 +7,12 @@
 	font-weight: 500;
 }
 .latest-news-content h3 {
-	font-size: 22px;
+	font-size: 18px;
 	line-height: 1.3;
 	margin-bottom: 19px;
 }
 .latest-news-content h3 a{
+	color: #000;
 	text-decoration: none;
 }
 .latest-news-content h3 a:hover {
@@ -68,4 +69,8 @@
 }
 .latest-news-box-3 .latest-news-content {
 	margin-top: 0;
+}
+.latest-text {
+	width: 50vw;
+	text-align: left;
 }
