--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -1,7 +1,7 @@
 
 .counter{
 	/* padding-top: 50px; */
-	background:  #223645;
+	background:  #16292A;
 }
 .content {
 	padding-top: 100px;
@@ -51,7 +51,7 @@
 	bottom: 0;
 }
 .counter-box-white h6::before {
-	background: #E12454;
+	background: #8F49A0;
 	z-index: 9;
 	width: 0px;
 	transition: .3s;
