--- a/src/landingPage/styles/testimonials.css
+++ b/src/landingPage/styles/testimonials.css
@@ -24,7 +24,7 @@
 	transition: .4s;
 }
 .testi-box-2:hover .testi-quato-icon-green {
-	background-color: rgb(225, 36, 84);
+	background-color: #8f49a0;
   	box-shadow: 0px 16px 32px 0px rgba(225, 36, 84, 0.4);
 }
 .testi-content p {
