--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -1,7 +1,8 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 .counter{
 	/* padding-top: 50px; */
 	background:  #223645;
+	height: 700px;
 }
 .content {
 	padding-top: 100px;
@@ -64,7 +65,8 @@
 	opacity: 1;
 }
 .appointment{
-	margin-top: 160px;
+	font-family: 'Inter', sans-serif !important;
+	margin-top: 100px;
 }
 .appointment-form-2 select{
 	font-size: 25px;
@@ -73,6 +75,9 @@
 	font-weight: 700;
 	color: #263544;
 }
+.appoint-ment-icon img{
+	margin-right: 20px;
+}
 .appointment-form-2 .level-0{
 	font-size: 20px;
 }
@@ -80,4 +85,12 @@
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
+}
+.content .row .justify-content-around{
+	position: relative;
+}
+@media(max-width: 768px) {
+	.counter{
+		height: 1100px;
+	}
 }
