--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -358,3 +358,13 @@
 	text-align: left;
 	font-size: 20px;
 }
+@media(max-width: 990px){
+	.section-title{
+		text-align: center;
+	}
+	.facalty-text{
+		text-align: center;
+		width: 50vw;
+		margin: auto !important;
+	}
+}
