--- a/src/landingPage/styles/home.css
+++ b/src/landingPage/styles/home.css
@@ -705,16 +705,6 @@
 	padding: 5px 20px;
 
 }
-.emergency-call{
-	position: sticky;
-	top: 100px;
-    left: 100%;
-	margin-left: 300px;
-	width: 60px;
-	height: 60px;
-	background-color: rgb(121, 34, 121);
-	border-radius: 10px;
-}
-.emergency-call img{
-	padding-top: 40%;
+.row .d-flex .align-items-center{
+	position: absolute;
 }
