--- a/src/landingPage/styles/emergency_call.css
+++ b/src/landingPage/styles/emergency_call.css
@@ -1,10 +1,9 @@
 .emergency-call{
-	position: ;
-	top: 100px;
-    left: 100%;
+	position: relative;
+	top: -84vh;
 	right: 0%;
-    margin-left: 86vw;
-	width: 60px;
+    margin-left: 89vw;
+	width: 80px;
 	height: 60px;
 	background-color: rgb(121, 34, 121);
 	border-radius: 10px;
