--- a/src/landingPage/styles/home.css
+++ b/src/landingPage/styles/home.css
@@ -69,6 +69,7 @@
 .logo img {
 	position: relative;
 	z-index: 2;
+	height: 40px;
 	/* background-color: #000; */
 }
 .logo-circle::before {
@@ -172,13 +173,13 @@
 	color: #223645;
 }
 .header-right {
-	margin-left: 22px;
+	/* margin-left: 22px; */
 }
 .header-social-icons ul li {
 	display: inline-block;
 }
 .header-menu-search {
-	margin-left: 24px;
+	/* margin-left: 24px; */
 }
 .header-social-icons ul li a {
     font-weight: 500;
@@ -259,17 +260,59 @@
 	min-height: 900px;
 	background-position: center top;
 }
-.slider-height-2 {
+.home__container {
+	padding: 30px 90px;
+	min-width: 100vw;
 	min-height: 950px;
 	background: url('../img/rah-assets/banner.png');
-	background-position: top;
-	background-size: cover;
+	/* background-position: top; */
+	/* object-fit: contain; */
+	background-repeat: no-repeat;
+	background-size: contain;
 }
+.home__container .nav-links ul{
+	margin-right: 150px !important;
+	/* padding-right: 60px; */
+	width: 45vw;
+	list-style-type: none;
+	display: flex;
+	justify-content: space-between;
+	padding: 0 0 20px 0 !important;
+	/* padding-bottom: 30px; */
+}
+.home__container .nav-links ul a{
+	text-decoration: none;
+	color: #fff;
+	font-weight: 600;
+}
+.home__container .nav-links ul a:hover{
+	color: #008489;
+}
+.home__container .login-section{
+	width: 15vw;
+	display: flex;
+	justify-content: space-between;
+	/* background-color: #1FB6BA; */
+	align-items: center;
+	/* margin-bottom: 30px; */
+}
+
+.home__container .login-section a{
+	margin-bottom: 20px;
+}
+
+.home__container .login-section i{
+	font-size: 24px;
+	cursor: pointer;
+	margin-bottom: 20px;
+}
+
+
 .slider-height-3 {
 	min-height: 780px;
 }
 .slider-right-2 {
-	padding-top: 180px;
+	padding-top: 50px;
 }
 .hero-text-box {
 	padding: 75px;
@@ -301,14 +344,15 @@
 	font-size: 14px;
 	font-weight: 500;
 	color: #aab6bf;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-bottom: 15px;
+	/* text-transform: uppercase; */
+	letter-spacing: 1px;
+	margin-bottom: 20px;
 	display: block;
 }
 .search-form h3 {
 	font-size: 36px;
-	margin-bottom: 45px;
+	font-weight: 700;
+	margin-bottom: 60px;
 }
 .label span {
 	font-size: 12px;
@@ -456,7 +500,7 @@
 	padding-right: 35px;
 	padding-left: 35px;
 	border: 2px solid #eae7ff;
-	margin-left: 29px;
+	/* margin-left: 29px; */
 	box-shadow: none;
 	border-radius: 40px;
 }
@@ -515,7 +559,7 @@
 	text-align: center;
 	color: #fff;
 	padding-left: 3px;
-	margin-left: 27px;
+	/* margin-left: 27px; */
 }
 .play-btn:hover {
 	background-color: rgb(225, 36, 84);
@@ -639,7 +683,7 @@
 	width: 20vw;
 	justify-content: space-evenly;
 	align-items: center;
-	margin-left: 120px;
+	/* margin-left: 120px; */
 	margin-bottom: 12px;
 }
 .login-btn{
@@ -648,7 +692,7 @@
 	font-size: 18px;
 	font-weight: 500;
 	border-radius: 10px;
-	box-shadow: 2px 5px 20px #000;
+	/* box-shadow: 2px 5px 20px #000; */
 	padding: 10px 20px;
 	background-color: #000;
 }
@@ -707,4 +751,32 @@
 }
 .row .d-flex .align-items-center{
 	position: absolute;
+}
+.page-content{
+	display: flex;
+	width: 100vw;
+	margin-left: -100px !important;
+	justify-content: space-evenly;
+}
+.page-content .caregive-box{
+	margin-left: 150px !important;
+}
+.page-content h1{
+	font-size: 60px;
+	margin-top: 50%;
+	width: 30vw;
+	font-weight: 750;
+	letter-spacing: 2px;
+	line-height: 6rem;
+}
+.page-content .caregive-btn a{
+	padding: 20px 100px !important;
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 20px;
+	border: 2px solid #008489;
+	color: #008489;
+}
+.emergency-call{
+	position: realtive;
 }
