--- a/src/hospitalPage/styles/vas.css
+++ b/src/hospitalPage/styles/vas.css
@@ -12,7 +12,7 @@
 
 .vas-services{
     display: flex;
-    padding-left: 400px;
+    padding-left: 17%;
 }
 
 .vas-title{
@@ -37,4 +37,17 @@ color: #18191F;
 
 .vas-service{
     margin-right: 210px;
+}
+.vas-service .service-title{
+    color: #3C5758;    ;
+    font-family: Inter;
+font-style: normal;
+font-weight: 800;
+font-size: 24px;
+line-height: 29px;
+/* identical to box height */
+
+display: flex;
+margin-left: 8px;
+font-feature-settings: 'pnum' on, 'lnum' on;
 }
