--- a/src/hospitalPage/styles/appointment.css
+++ b/src/hospitalPage/styles/appointment.css
@@ -101,7 +101,11 @@
 	width: 100%!important;
 }
 .appoinment-right {
-	background-color: #e12454;
+	align-content: center;
+	width: fit-content;
 	margin-right: 0!important;
 	padding-right: 0!important;
+}
+.appoinment-box-2{
+	height: fit-content;
 }
