--- a/src/hospitalPage/styles/footer.css
+++ b/src/hospitalPage/styles/footer.css
@@ -190,8 +190,8 @@
 	padding-left: 10px;
 	padding-top: 15px;
 }
-.btn-icon-green{
-	left: 300%;
-	margin-bottom: 20px;
-    margin-top: 20px;
+.btn-icon-green #green{
+	left: 300%!important;
+	margin-bottom: 20px!important;
+    margin-top: 20px!important;
 }
