--- a/src/hospitalPage/styles/hospitaldoctor.css
+++ b/src/hospitalPage/styles/hospitaldoctor.css
@@ -50,8 +50,13 @@ margin-left: 30px;
 
 .hosdoc-doctor-section{
     display: flex;
+    width: 50%;
 }
 
 .hosdoc-doctor-section .row{
     margin-right: 10px;
+}
+.btn-icon-green{
+    left: -25%;
+    align-content: center;
 }
