--- a/src/App.css
+++ b/src/App.css
@@ -4101,3 +4101,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   -webkit-animation-name: zoomOutUp;
   animation-name: zoomOutUp;
 }
+.emergency-call {
+  position: sticky !important;
+  top: 50vh;
+  margin-right: 0%!important;
+  height: 0;
+}
