--- a/src/hospitalPage/styles/hospitaldoctor.css
+++ b/src/hospitalPage/styles/hospitaldoctor.css
@@ -60,3 +60,6 @@ margin-left: 30px;
     left: -25%;
     align-content: center;
 }
+.hosdoc-body .h4services-content {
+    padding-right: 0px  !important;
+}
