--- a/src/landingPage/styles/doctor.css
+++ b/src/landingPage/styles/doctor.css
@@ -1,122 +1,57 @@
-.team-activation{
-    display: flex;
+.doctor{
+	padding: 25px 80px;
+	height: 500px;
+	width: 100%;
 }
-.team-box-2 {
-	padding: 30px;
-	background-color: rgb(255, 255, 255);
-	box-shadow: 0px 8px 16px 0px rgba(181, 179, 255, 0.1);
-	padding-bottom: 18px;
+
+.line-design{
+	margin-left: 400px;
 }
-.team-box-3 {
-	padding: 0;
-	box-shadow: none;
-	margin-bottom: 0;
+
+.heading{
+	
+font-family: Inter;
+font-style: normal;
+font-weight: 600;
+font-size: 48px;
+line-height: 160%;
+/* identical to box height, or 77px */
+margin-top: 70px;
+text-align: center;
+color: #000000;
 }
-.team-content h3 {
-	margin-bottom: 17px;
+/* .parent-line{
+	margin-top: 60px;
 }
-.team-content h6 {
-	color: #e12454;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+.line-1{
+	float: left;
+	opacity: 0.6;
+border: 4px solid #8F49A0;
+width: 104px;
+height: 0px;
+margin-left: 40%;
 }
-.team-link {
-	position: absolute;
-	bottom: 25px;
-	height: 60px;
-	width: 60px;
-	display: inline-block;
-	border-radius: 50%;
-	background-color: rgb(143, 181, 105);
-	box-shadow: 0px 8px 16px 0px rgba(143, 181, 105, 0.3);
-	font-size: 26px;
-	font-weight: 600;
-	line-height: 60px;
-	color: #fff;
-	right: 51px;
+.line-2{
+	float: right;
+	width: 23px;
+height: 0px;
+margin-right: 45%;
+
+opacity: 0.6;
+border: 4px solid #8F49A0;
+} */
+.Slider { 
+	
+	overflow-x: auto;
+	display: flex;  
+	width: 100%;
+
+	align-items: center; 
+	}
+.Slider img{
+	margin-top: 70px;
+	margin-right: 15px;
+
 }
-.team-link:hover {
-	background-color: rgb(225, 36, 84);
-	box-shadow: 0px 8px 16px 0px rgba(225, 36, 84, 0.2);
-	color: #fff;
-}
-.team-box-2 .team-member-info h3 {
-	margin-bottom: 18px;
-}
-.team-box-3 .team-member-info h3 {
-	font-size: 36px;
-}
-.team-author-info span {
-	font-size: 12px;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	color: #e12454;
-	padding: 11px 20px;
-	display: inline-block;
-	background: #fff;
-}
-.team-author-info h6 {
-	font-size: 18px;
-	color: #223645;
-	padding: 11px 20px;
-	background: #fff;
-}
-.team-author-info {
-	position: absolute;
-	margin-top: -60px;
-	margin-left: 30px;
-	transition: .4s;
-	visibility: hidden;
-	opacity: 0;
-	right: 0;
-	width: 146%;
-	left: 0;
-	z-index: 99;
-	box-shadow: 0px 8px 16px 0px rgba(205, 190, 255, 0.2);
-}
-.team-box:hover .team-author-info {
-	opacity: 1;
-	visibility: visible;
-}
-.team-activation .slick-dots {
-	text-align: center;
-	margin-bottom: 30px;
-}
-.team-activation .slick-dots li {
-  display: inline-block;
-  cursor: pointer;
-}
-.team-activation .slick-dots li button {
-  text-indent: -111111111111px;
-  padding: 0;
-  width: 30px;
-  height: 4px;
-  border: 0;
-  background: #e0e9ff;
-  margin: 0 5px;
-  cursor: pointer;
-}
-.team-activation .slick-dots li.slick-active button {
-  background: #8fb569;
-}
-.team-social-profile ul li {
-	display: inline-block;
-	margin: 0 9.5px;
-}
-.team-social-profile ul li a {
-	font-size: 14px;
-	color: #a0aab1;
-}
-.team-social-profile ul li a:hover {
-	color: #ce1b28;
-}
-.team-activation{
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-}
-.team-activation .col-xl-12{
-	width: 200px;
-}
+
+	.Slider::-webkit-scrollbar {    display: none;}
