--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 ::placeholder{
    font-family: 'Inter', sans-serif !important;
 }
-.landingPage{
+.App{
    overflow-x: hidden;
   /* height: 100%;  */
 }
