--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -1,47 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
-.counter{
+.counter-1{
 	/* padding-top: 50px; */
 	background:  #16292A;
-	height: 700px;
+	height: 400px;
 
 }
-.content {
+.content-1 {
 	padding-top: 100px;
 }
 
-.single-couter h1 {
+.single-couter-1 h1 {
 	font-size: 80px;
 	color: #e12454;
 	margin-top: 20px;
 	font-weight: 200;
 }
-.counter-box h1 {
+.counter-box-1 h1 {
 	font-weight: 600;
 	color: #fff;
 	font-size: 50px;
 	margin-top: 12px;
 }
-.counter-box-white h1 {
+.counter-box-white-1 h1 {
 	color: #223645;
 }
-.single-couter h3 {
+.single-couter-1 h3 {
     font-size: 24px;
     margin-top: 10px;
     margin-bottom: 17px;
 }
-.single-couter p {
+.single-couter-1 p {
 	margin-bottom: 0;
 	padding-right: 40px;
 }
-.counter-text p {
+.counter-text-1 p {
 	width: 100%;
 	padding: 0 52px;
 }
-.counter-box-white h6 {
+.counter-box-white-1 h6 {
 	position: relative;
 	margin-bottom: 11px;
 }
-.counter-box-white h6::after, .counter-box-white h6::before {
+.counter-box-white-1 h6::after, .counter-box-white h6::before {
 	position: absolute;
 	content: "";
 	width: 30px;
@@ -52,7 +52,7 @@
 	margin: auto;
 	bottom: 0;
 }
-.counter-box-white h6::before {
+.counter-box-white-1 h6::before {
 	background: #8F49A0;
 	z-index: 9;
 	width: 0px;
@@ -60,43 +60,121 @@
 	visibility: hidden;
 	opacity: 0;
 }
-.counter-box.counter-box-white:hover h6::before {
+.counter-box-1.counter-box-white-1:hover h6::before {
 	width: 30px;
 	visibility: visible;
 	opacity: 1;
 }
-.appointment{
-	font-family: 'Inter', sans-serif !important;
-	margin-top: 100px;
+
+
+.outer-box{
+	position: relative;
+	height: 820px;
+	width:100%;
+	background: repeating-linear-gradient(#000, #000 49.9%, #ECECEC 50.1%, #ECECEC 100%);
 }
-.appointment-form-2 select{
-	font-size: 25px;
-	margin-bottom: 9px;
-	top: 10px;
-	font-weight: 700;
-	color: #263544;
+.inner-box{
+	background-color: #fff;
+	position: absolute;
+	
+	height: 666px;
+	width:80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	
+	
 }
-.appoint-ment-icon img{
-	margin-right: 20px;
+.appoinment-box-content{
+
 }
 .appointment-form-2 .level-0{
-	font-size: 20px;
+	font-size: 10px;
 }
-.no-gutters{
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
+.appointment-form-2 select{
+	font-size: 10px;
+	
+	top: 10px;
+	font-weight: 400;
+	color: #263544;
 }
-.content .row .justify-content-around{
-	position: relative;
+.appoint-button{
+	background: #1FB6BA;
+box-shadow: 0px 4px 12px rgba(31, 182, 186, 0.5);
+border-radius: 48px;
+Width :189px;
+Height :50px;
+/* Inside Auto Layout */
+border: none;
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 10px 0px;
+font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+
+color: #FFFFFF;
 }
-@media(max-width: 768px) {
-	.counter{
-		height: 1100px;
-	}
+.appoint-ment-icon img{
+
 }
-.appoint_banner{
-	margin-right: 0!important;
-	width: 100%;
-	margin-left: 105px;
+.box-title{
+	font-family: Inter;
+font-style: normal;
+font-weight: bold;
+font-size: 51.96px;
+line-height: 160%;
+/* or 83px */
+
+
+color: #263544;
+
+}
+.appoint-card{
+	border-bottom: 2px solid #ECECEC;
+}
+.appoint-card form input{
+	border: none;
+	font-family: Inter;
+font-style: normal;
+font-weight: 800;
+font-size: 14px;
+
+/* or 38px */
+
+letter-spacing: -0.01em;
+
+
+}
+
+::-webkit-input-placeholder { /* Edge */
+	color: #263544;
+  }
+  
+.TB{
+	border: none;
+	font-family: Inter;
+font-style: normal;
+font-weight: 800;
+font-size: 14px;
+background: #fff;
+/* or 38px */
+
+letter-spacing: -0.01em;
+
+color: #263544;
+}
+.appoint-card form label{
+	font-family: Raleway;
+font-style: normal;
+font-weight: 500;
+font-size: 15.0476px;
+line-height: 18px;
+/* identical to box height */
+
+
+color: #C8C8C8;
 }
