--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -15,7 +15,7 @@
 	width: 100%;
 	align-items: center;
 	height: 500px;
-	border: 3px solid #73AD21;
+	border: 3px solid #f3f7ee;
 	
 }
 .card-slider{
