--- a/src/landingPage/styles/services.css
+++ b/src/landingPage/styles/services.css
@@ -1,23 +1,32 @@
-.services-border {
-	border-top: 1px solid #ececec;
-}
+
 
 .service-1 {
-	
+	padding: 100px 0px;
+}
+
+.service-1 .section-text h1{
+	font-size: 50px;
+}
+
+.service-1 .section-text h5{
+	color: #484848;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 180%;
+}
+
+.service-1 .section-line{
+	/* margin-top: 100px; */
 }
 
 .slider {
-	padding: 25px 130px;
+	padding: 25px 130px 80px;
 	margin-top: 0;
-	background: repeating-linear-gradient(#fff, #fff 49.9%, #000 50.1%, #000 100%);
-	
-  
+	background: repeating-linear-gradient(#fff, #fff 31.1%, #16292A 30.9%, #16292A 100%);	
 	width: 100%;
 	align-items: center;
-	height: 500px;
-	border: 3px solid #f3f7ee;
-	
 }
+
 .card-slider{
 	display: flex;
 	flex-wrap: nowrap;
@@ -34,36 +43,44 @@
 	background-color: white;
 	text-align: left;
 	position: relative;
-	width: 320px;
-	height: 404px;
+	width: 32%;
+	height: auto;
 	margin-left: 1rem;
+	/* padding-bottom: 20px; */
 }
 
 .banner-img {
-	position: absolute;
+	position: relative;
 	background-image: url('../img/rah-assets/sumhospital.png');
-	height: 10rem;
+	height: 15rem;
 	width: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	margin-bottom: -10px;
 }
 
 .profile-img {
+	position: relative;
 	border: none;
 	align-items: center;
-	width: 8rem;
-	position: relative;
-	margin-top: 9rem;
+	width: auto;
+	padding: 2px 10px;
+	text-transform: uppercase;
+	font-weight: 800;
+	letter-spacing: 0.08rem;
 	background-color: #00ACB2;
 	margin-left: 2rem;
+	margin-top: -20px;
 	color: white;
 }
 
 .name {
+	margin-top: 20px;
 	margin-left: 2rem;
 	font-weight: bold;
 	font-size: 1.5rem;
+	margin-bottom: 15px;
 }
 
 .description {
@@ -72,38 +89,48 @@
 }
 
 .card-content {
-	margin-top: 0px;
-	padding-top: 0px 0px;
 	margin-left: 2rem;
 	display: flex;
 	flex: 100%;
 	height: min-content;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 10px;
 }
 
 .card-content img {
-	Width: 14.32px;
-	Height: 20.06px;
+	Width: 8%;
 	display: flex;
-	flex: 8%;
+	flex: 5%;
 	justify-content: flex-start;
+	
 }
 
 .card-content .text {
 	display: flex;
 	flex: 92%;
 	justify-content: flex-start;
+	font-size: 15px;
 }
 
-.button {
+.service-1 .card-content .active{
+	font-weight: 600;
+	color: #00ACB2 !important;
+	margin-bottom: 20px;
+}
+
+.card-1 .button {
+	text-decoration: none;
 	margin-left: 2rem;
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 18px;
-	line-height: 160%;
 	/* identical to box height, or 29px */
 	color: #707070;
 }
+
+
 
 .section-title h5 {
 	margin-bottom: 28px;
