--- a/src/landingPage/styles/counter.css
+++ b/src/landingPage/styles/counter.css
@@ -71,7 +71,7 @@
 	/*position: relative;*/
 	height: 820px;
 	width:100%;
-	background: repeating-linear-gradient(#000, #000 49.9%, #ECECEC 50.1%, #ECECEC 100%);
+	background: repeating-linear-gradient(#16292A, #16292A 49.9%, #fff 50.1%, #fff 100%);
 }
 .inner-box{
 	background-color: #fff;
